# aurasflow

./: app.py  pyproject.toml  replit.md  requirements.txt
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts  prisma.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
backend/src/prisma/: prisma.service.ts
backend/src/projects/: projects.controller.ts  projects.module.ts  projects.service.ts
backend/src/users/: users.controller.ts  users.service.ts
frontend/: HOME_PAGE_IMPROVEMENTS.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(styles)/: theme.ts
frontend/app/dashboard/: page.tsx
frontend/components/: ClientWrapper.tsx  CompareTable.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  MobileMenu.tsx  Navbar.tsx  PlanCard.tsx  Pricing.tsx  Process.tsx  Testimonials.tsx
frontend/config/: pricing.ts
frontend/lib/: auth.ts  i18n.tsx  i18n_new.ts  i18n_new.tsx
frontend/locales/: ar.json  ar_new.json  en.json  en_new.json
frontend/types/: project.ts
instance/: db.sqlite
migrations/versions/: 13dc275b2c95_initial_migration.py
static/: script.js  style.css
templates/: 403.html  404.html  500.html  base.html  content_results.html  create_project.html  dashboard.html  edit_project.html  generate_content.html  generate_plan.html  index.html  login.html  manage_social.html  profile.html  project_detail.html  projects.html  register.html  view_plan.html
(+30 files in other folders)
